Use local doc-gen4

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,15 +1,12 @@
 {"version": "1.1.0",
  "packagesDir": ".lake/packages",
  "packages":
- [{"url": "https://github.com/leanprover/doc-gen4",
-   "type": "git",
-   "subDir": null,
+ [{"type": "path",
    "scope": "",
-   "rev": "0ece4c27ae1abbd0b70df729e09d8b9c06351b80",
    "name": "«doc-gen4»",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
    "inherited": false,
+   "dir": "/home/jcreed/pgit/doc-gen4",
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/PatrickMassot/checkdecls.git",
    "type": "git",
