--- a/lakefile.toml
+++ b/lakefile.toml
@@ -17,7 +17,7 @@ git = "https://github.com/PatrickMassot/checkdecls.git"
 
 [[require]]
 name = "«doc-gen4»"
-git = "https://github.com/leanprover/doc-gen4"
-rev = "main"
+path = "/home/jcreed/pgit/doc-gen4"
+
 [[lean_lib]]
 name = "BlueprintDebug"
