Hang at v4.25.0-rc2

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,12 +1,15 @@
 {"version": "1.1.0",
  "packagesDir": ".lake/packages",
  "packages":
- [{"type": "path",
+ [{"url": "https://github.com/leanprover/doc-gen4",
+   "type": "git",
+   "subDir": null,
    "scope": "",
+   "rev": "a71fdaa4800d0e0ea990f74aafea3e6c13eec2fb",
    "name": "«doc-gen4»",
    "manifestFile": "lake-manifest.json",
+   "inputRev": "v4.25.0-rc2",
    "inherited": false,
-   "dir": "/home/jcreed/pgit/doc-gen4",
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/PatrickMassot/checkdecls.git",
    "type": "git",
@@ -32,7 +35,7 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "1dae8b12f8ba27576ffe5ddee78bebf6458157b0",
+   "rev": "72ae7004d9f0ddb422aec5378204fdd7828c5672",
    "name": "Cli",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -42,7 +45,7 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "1829aec18f0e8a661dd5acf5d659d636979ba4f2",
+   "rev": "fae4fbc11a6076475940e0d4c43aea77d65d5898",
    "name": "UnicodeBasic",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
