Actually try better version

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -5,10 +5,10 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "a71fdaa4800d0e0ea990f74aafea3e6c13eec2fb",
+   "rev": "0ece4c27ae1abbd0b70df729e09d8b9c06351b80",
    "name": "«doc-gen4»",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.25.0-rc2",
+   "inputRev": "v4.25.0",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/PatrickMassot/checkdecls.git",
@@ -25,7 +25,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "6ee2e7609dc6b885c84bfea76cc7b55b36705b5c",
+   "rev": "fe51f2299c1a29c6f44c9be88611853d2ad9d6cf",
    "name": "mathlib",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
@@ -35,7 +35,7 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "72ae7004d9f0ddb422aec5378204fdd7828c5672",
+   "rev": "1dae8b12f8ba27576ffe5ddee78bebf6458157b0",
    "name": "Cli",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -45,7 +45,7 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "fae4fbc11a6076475940e0d4c43aea77d65d5898",
+   "rev": "1829aec18f0e8a661dd5acf5d659d636979ba4f2",
    "name": "UnicodeBasic",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
