--- a/.github/workflows/blueprint.yml
+++ b/.github/workflows/blueprint.yml
@@ -36,5 +36,6 @@ jobs:
         uses: leanprover-community/docgen-action@deed0cdc44dd8e5de07a300773eb751d33e32fc8 # 2025-10-26
         with:
           api-docs: false
+          api_docs: false
           blueprint: true
           homepage: home_page
