Try my own fork

--- a/.github/workflows/blueprint.yml
+++ b/.github/workflows/blueprint.yml
@@ -33,7 +33,7 @@ jobs:
           use-github-cache: false
 
       - name: Compile blueprint and documentation
-        uses: leanprover-community/docgen-action@deed0cdc44dd8e5de07a300773eb751d33e32fc8 # 2025-10-26
+        uses: jcreedcmu/docgen-action
         with:
           api-docs: false
           api_docs: false
