--- a/.github/workflows/blueprint.yml
+++ b/.github/workflows/blueprint.yml
@@ -22,15 +22,15 @@ jobs:
     runs-on: ubuntu-latest
     name: Build project
     steps:
-      - name: Checkout project
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-        with:
-          fetch-depth: 0 # Fetch all history for all branches and tags
+      # - name: Checkout project
+      #   uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+      #   with:
+      #     fetch-depth: 0 # Fetch all history for all branches and tags
 
-      - name: Build the project
-        uses: leanprover/lean-action@434f25c2f80ded67bba02502ad3a86f25db50709 # v1.3.0
-        with:
-          use-github-cache: false
+      # - name: Build the project
+      #   uses: leanprover/lean-action@434f25c2f80ded67bba02502ad3a86f25db50709 # v1.3.0
+      #   with:
+      #     use-github-cache: false
 
       - name: Compile blueprint and documentation
         uses: jcreedcmu/docgen-action@main
