--- a/.github/workflows/blueprint.yml
+++ b/.github/workflows/blueprint.yml
@@ -35,7 +35,6 @@ jobs:
       - name: Compile blueprint and documentation
         uses: jcreedcmu/docgen-action@main
         with:
-          api-docs: "jibber"
-          api_docs: "jabber"
+          api-docs: false
           blueprint: false
           homepage: home_page
