Try real option

--- a/.github/workflows/blueprint.yml
+++ b/.github/workflows/blueprint.yml
@@ -35,6 +35,6 @@ jobs:
       - name: Compile blueprint and documentation
         uses: jcreedcmu/docgen-action@main
         with:
-          api_docs: false
+          api-docs: false
           blueprint: false
           homepage: home_page
